...
        ownProfile.value = ownProfile(id, context)
    }
    Scaffold(
        content = { paddingValues ->
            Box(modifier = Modifier
                .fillMaxSize()
                .padding(paddingValues).testTag("profile_screen")) {
                Column{
                    Details(navController, ownProfile)
                }
            }
        },
        bottomBar ={
...
                Row(Modifier.fillMaxWidth().padding(end=10.dp, top=10.dp, bottom=25.dp),
                    horizontalArrangement = Arrangement.End){
                    val menuExpanded = remember { mutableStateOf(false) }
                    val context = LocalContext.current
                    if(ownProfile.value){
                        Box{
                            IconButton(onClick = { menuExpanded.value= true }, modifier = Modifier.testTag("profile_dropdownMenu")) {
                                Icon(
                                    imageVector= Icons.Rounded.MoreVert,
                                    contentDescription = null
                                )
                            }
                            DropdownMenu(
...
                                    leadingIcon = {
                                        Icon(
                                            imageVector = ImageVector.vectorResource(R.drawable.baseline_edit_24),
                                            contentDescription = null,
                                            tint = MaterialTheme.colorScheme.onSecondaryContainer
                                        )},
                                    modifier = Modifier.background(MaterialTheme.colorScheme.secondaryContainer).testTag("profile_dropdownMenu_edit")
                                )
                                DropdownMenuItem(
                                    text={ Text("Upload background image", color= MaterialTheme.colorScheme.onSecondaryContainer) },
                                    onClick = {
                                        menuExpanded.value = false
                                        navController.navigate(Screen.UploadImageScreen.route+"?id=${vm.user._id}&uploadImageType=${UploadImageType.BACKGROUND}")
...
                Column(Modifier.fillMaxSize(),
                    horizontalAlignment = Alignment.CenterHorizontally){
                    val name = if(vm.user.name==""){"-"} else{vm.user.name}
                    Text(name,
                        fontWeight = FontWeight.Bold,
                        fontSize = 24.sp,
                        modifier = Modifier.testTag("profile_name"),
                    )
                    Text(vm.user.username,
                        fontSize = 12.sp,
                        color = MaterialTheme.colorScheme.secondary,
                        modifier = Modifier.testTag("profile_username")
                    )
                    Column(Modifier.fillMaxWidth().padding(horizontal = 25.dp, vertical = 10.dp)){
                        val email = if(vm.user.email==""){"-"} else{vm.user.email}
                        Row(verticalAlignment = Alignment.CenterVertically){
                            Icon(imageVector = Icons.Rounded.MailOutline, contentDescription = null,tint= MaterialTheme.colorScheme.primary)
                            Text(email,
                                modifier = Modifier.padding(start=5.dp).testTag("profile_email"))
                        }
                        val livingLabel = (vm.user.city?: "-")+", "+(vm.user.country?: "-")
                        Row(verticalAlignment = Alignment.CenterVertically){
                            Icon(imageVector = ImageVector.vectorResource(R.drawable.baseline_public_24), contentDescription = null,tint= MaterialTheme.colorScheme.primary)
                            Text(livingLabel,
                                modifier = Modifier.padding(start=5.dp).testTag("profile_livingLabel"))
                        }

                    }
                    Column(Modifier.fillMaxWidth().padding(horizontal = 25.dp, vertical = 10.dp)){
                        Text("About me", fontWeight = FontWeight.Thin)
                        Text(vm.user.description?:"...", modifier = Modifier.testTag("profile_description"))
                    }
                    ListItemDivider()
                    Row(modifier = Modifier
                        .padding(horizontal = 25.dp)
                        .fillMaxWidth(),
                        horizontalArrangement = Arrangement.SpaceEvenly){
...
