...
            InputField(password,keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password, imeAction = ImeAction.Done), PasswordVisualTransformation(), label="Password", icon = Icons.Rounded.Lock, labelColor = MaterialTheme.colorScheme.onPrimaryContainer, testTag="password")

            Spacer(Modifier.height(10.dp))
            Button(onClick={
                vm.login(username.value,password.value, context, navController)
            },
                Modifier.align(Alignment.CenterHorizontally).testTag("loginBtn")){
                Text("Login", fontWeight = FontWeight.Bold, fontSize = 15.sp)
            }
            Spacer(Modifier.height(30.dp))
            ClickableText(
                text = AnnotatedString("Sign up here"),
                modifier = Modifier
...
